# Doculuna

./: .env  .env.example  .gitignore  .replit  DOCULUNA_UIUX_SPECIFICATION.md  FEATURE_VERIFICATION.md  README.md  RENDER_DEPLOYMENT.md  audit_admin_schema.py  check_db.py  config.py  main.py  pyproject.toml  render.yaml  replit.md  requirements.txt
admin/: dashboard.py
analytics/: tracker.py
attached_assets/: Pasted--1-START-WELCOME-MESSAGE-User-Trigger-When-a-user-sends-start-or-opens-the-bot-for-the-fir-1760278954167_1760278954180.txt  Pasted--I-am-building-a-Telegram-bot-called-DocuLuna-It-perfor_1764661034709.txt  Pasted--Problem-Overview-The-admin-panel-is-not-showing-updated-user-data-1-New-user-sign-ups--1762208048347_1762208048358.txt  Pasted-Initialize-this-modules-gamification-py-messages-py-smart-recommendation-py-file-naming-py-hist-1764616662898_1764616662906.txt  Pasted-Integrate-a-referral-system-manual-withdrawal-flow-and-weekly-referral-leaderboard-into-the-existi-1761867100931_1761867100940.txt  Pasted-You-are-updating-an-existing-Aiogram-3-x-Telegram-bot-Only-modify-the-callbacks-py-file-as-describe-1760705497762_1760705497782.txt
data/: usage.json
database/: db.py  doculuna.db  schema.sql
docs/: bot_ux_flow.md
handlers/: admin.py  admin_withdrawals.py  callbacks.py  file_handler.py  file_naming.py  gamification.py  help.py  history.py  payments.py  paystack.py  premium.py  profile_handlers.py  referrals.py  shortcuts.py  smart_recommendation.py  start.py  stats.py  tool_instructions.py  upgrade.py  wallet.py
notifications/: system.py
(+19 files in other folders)
