[project]
name = "doculuna-bot"
version = "0.1.0"
description = "DocuLuna Bot - Professional Document Processing Telegram Bot"
authors = ["DocuLuna Team"]
requires-python = ">=3.11"
dependencies = [
    "aiogram==3.13.1",
    "aiohttp==3.10.10",
    "aiosqlite>=0.21.0",
    "PyMuPDF==1.23.26",
    "python-docx==1.1.0",
    "Pillow==10.2.0",
    "python-dotenv==1.0.1",
    "reportlab==4.0.8",
    "docx2pdf==0.1.8",
    "pdf2docx==0.5.6",
    "PyPDF2==3.0.1",
    "aiofiles==23.2.1",
    "pikepdf>=10.0.0",
    "cryptography>=43.0.0",
    "psutil>=6.0.0",
    "fpdf2>=2.8.0",
]
